# CompetitiveProgramming

./: .vsls.json  C++ Notes.docx  CMakeLists.txt  Competitive Programming Scratch.docx  LICENSE  README.md  USACO Problem List.jfif  USACO Retype.cpp  Winning-codeforces.txt  cf  cf.cpp  cf_template.cpp  problem_z.cpp  ~$mpetitive Programming Scratch.docx
BigTech/: microsoft-grid.cpp
BigTech/Google/CodeJam/Qualifications/2022/: A.cpp  B.cpp  C.cpp  D-stress_test.cpp  D.cpp
BigTech/Google/CodeJam/Round1/2022b/: A.cpp  B.cpp  C.cpp  template.cpp
BigTech/Google/CodeJam/Round1/2022c/: A.cpp  A_2.cpp
BigTech/Meta/Hackercup/2024/Round1/: .gitignore  A.cpp  B.cpp  D.cpp
BigTech/Meta/Hackercup/Qualification/2022/: A.cpp  B1.cpp  B2.cpp  C1.cpp  output.txt  run.out  test_case.txt
BigTech/Meta/Hackercup/Round1/2022/: A1.cpp  A2.cpp  B1.cpp  run.out  test_case_generator.cpp  test_case_output.txt  watering_well_chapter_1_input_output.txt
BigTech/Meta/Hackercup/Round1/2022/tests/: consecutive_cuts_chapter_1_input_output_A2.txt  consecutive_cuts_chapter_2_input_output.txt
BigTech/Meta/Hackercup/Round2/2022/: A1.cpp  B.cpp  run.out  template.cpp
BigTech/Meta/Hackercup/Round2/2022/In Contest/: A1.cpp  copy.txt  perfectly_balanced_chapter_1_validation_input_output.txt  run.out
CF/: .vsls.json  a_cf.cpp  anavation.cpp  b_cf.cpp  brute.cpp  c_cf.cpp  cf.cpp  cf_b.cpp  cf_prac.cpp  cf_template.cpp  e_cf.cpp  f_cf.in  f_cf.out  f_cf_correct.out  icpc.cpp  pacmen.cpp  prac_cf.cpp  run.out  template.cpp  test.cpp
CF/2000+/: aaparsa.cpp  flip-cards.cpp  run.out
CF/div1d/: aaparsa.cpp  run.out
CF/div2.E/: 726.1.cpp  run.out
CF/run.out.dSYM/Contents/Resources/DWARF/: run.out
CSES/: array-division.cpp  building-roads.cpp  building-teams.cpp  coin-combinations-1.cpp  coin-combinations-2.cpp  common-divisors.cpp  counting-divisors.cpp  counting-rooms-bfs.cpp  counting-rooms.cpp  dice-combinations.cpp  divisor-analysis.cpp  exponentiation-2.cpp  exponentiation.cpp  flight-routes-check.cpp  flight-routes.cpp  forest-queries.cpp  game-routes.cpp  graph-girth.cpp  investigation.cpp  labyrinth.cpp  max-sub-sum.cpp  message-route.cpp  movie-festival-2.cpp  movie-festival.cpp  range-update-queries.cpp  range-updates-and-sum.cpp  range-xor-queries.cpp  room-allocation.cpp  run.out  shortest-routes-1.cpp  static-range-sum.cpp  subarrays-sums-1.cpp  sum-2.cpp  sum-3.cpp  task-deadlines.cpp  towers.cpp  traffic-lights.cpp
Fun/: break.in  erdos.cpp  erdos.in  erdos2.in  run.out  sudoku.cpp  test.cpp
Google/CodeJam/Qualifications/2022/: run.out
Google/CodeJam/Round1/2021a/: A.cpp  run.out
Google/CodeJam/Round1/2022a/: A.cpp  B.cpp  C.cpp  C_after.cpp  run.out
Google/CodeJam/Round1/2022b/: C_final.cpp  run.out
Google/CodeJam/Round1/2022c/: run.out
ICPC/2020-NAQ/: A.cpp  C.cpp  D.cpp  F.cpp  H.cpp  run.out
ICPC/2020-NERC Regionals/: A.cpp  B.cpp  D.cpp  I.cpp  M.cpp  run.out
ICPC/2021-NAC/: D.cpp  F.cpp  M.cpp  run.out
ICPC/2021-SCA Regionals/: F.cpp
ICPC/2022/: C.cpp  C2.cpp  D.cpp  M.cpp  prime.out  prime_sieve.cpp  run.out
ICPC/2022-NAQ/: A.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  G2.cpp  G3.cpp  H.cpp  K.cpp  run.out
ICPC/2023-NAQ/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  L.cpp  run.out
ICPC/2023-NAQ/run.out.dSYM/Contents/: Info.plist
ICPC/2023-NAQ/run.out.dSYM/Contents/Resources/DWARF/: run.out
ICPC/Practice/: A.cpp  C.cpp  G.cpp  H.cpp  quantum-superposition.cpp  run.out  template.cpp
ICPC/Practice/knapsack/: BookShopSol.cp  CoinCombosII.cp  stdin_Template.cp  stdin_Template.cpp
Java/Temp/: FIVE.java
Java/src/: AddNums.java  Myes.java  One.java  fivefive.java  four.java  seven.java  six.java  three.java  two.java
Leetcode/: find-pivot-index.cpp  leetcode.cpp  run.out
Leetcode/contests/weekly/: 314.cpp  bi-89.cpp  run.out
Leetcode/easy/: 2432.cpp  2441.cpp  2443.cpp  2455.cpp  2460.cpp  653.cpp
Leetcode/hard/: 2435.cpp  2444.cpp  2458.cpp  827.cpp  large-island.cpp
Leetcode/medium/: 2433.cpp  2434.cpp  2442.cpp  2456.cpp  2457.cpp  2461.cpp  2462.cpp  3.py  5.py  6.py  run.out  valid-sudoku.cpp
Templates/: CF Template.cpp  Checklist.txt  Math Template.cpp  USACO Template.cpp  hash.cpp  sum.cpp  xor.cpp
USACO/: USACO Template.cpp  run.out  usaco.cpp  usaco_a.cpp  usaco_b.cpp
USACO/Gold/: 0G-angry.cpp  0G-snowboots.cpp  2.out  3.out  8.out  G-angry.cpp  G-cardgame.cpp  G-cbarn2.cpp  G-cownav.cpp  G-fcolor.cpp  G-feast.cpp  G-fencedin.cpp  G-hps.cpp  G-lasers.cpp  G-moonetwork.cpp  G-mootube.cpp  G-shortcut.cpp  G-snowboots.cpp  G-split.cpp  G-talent.cpp  G-time.cpp  G-timeline.cpp  S-ccski.cpp  compare-out.cpp  run.out  time-testing.cpp
USACO/Silver/: S-convention2.cpp  S-countcross.cpp  S-diamond.cpp  S-div7.cpp  S-fenceplan.cpp  S-moocast.cpp  S-mountains.cpp  S-paintbarn.cpp  S-perimeter.cpp  S-rental.cpp  S-revegetate.cpp  S-snowboots.cpp  S-where.cpp  S-wormsort.cpp  hps.cpp  run.out  testCases.out
USACO/Silver/failed/: S-diamonds.cpp
