cmake_minimum_required(VERSION 3.25)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(CompetitiveProgramming
        BigTech/Google/CodeJam/Qualifications/2022/A.cpp
        BigTech/Google/CodeJam/Qualifications/2022/B.cpp
        BigTech/Google/CodeJam/Qualifications/2022/C.cpp
        BigTech/Google/CodeJam/Qualifications/2022/D-stress_test.cpp
        BigTech/Google/CodeJam/Qualifications/2022/D.cpp
        BigTech/Google/CodeJam/Qualifications/2022/E.cpp
        BigTech/Google/CodeJam/Round1/2021a/A.cpp
        BigTech/Google/CodeJam/Round1/2022a/A.cpp
        BigTech/Google/CodeJam/Round1/2022a/B.cpp
        BigTech/Google/CodeJam/Round1/2022a/C.cpp
        BigTech/Google/CodeJam/Round1/2022a/C_after.cpp
        BigTech/Google/CodeJam/Round1/2022b/A.cpp
        BigTech/Google/CodeJam/Round1/2022b/B.cpp
        BigTech/Google/CodeJam/Round1/2022b/C.cpp
        BigTech/Google/CodeJam/Round1/2022b/C_final.cpp
        BigTech/Google/CodeJam/Round1/2022b/template.cpp
        BigTech/Google/CodeJam/Round1/2022c/A.cpp
        BigTech/Google/CodeJam/Round1/2022c/A_2.cpp
        BigTech/Google/CodeJam/Round1/2022c/B.cpp
        BigTech/Google/CodeJam/Round1/2022c/C.cpp
        BigTech/Google/CodeJam/Round1/2022c/template.cpp
        BigTech/Meta/Hackercup/Qualification/2022/A.cpp
        BigTech/Meta/Hackercup/Qualification/2022/B1.cpp
        BigTech/Meta/Hackercup/Qualification/2022/B2.cpp
        BigTech/Meta/Hackercup/Qualification/2022/C1.cpp
        BigTech/Meta/Hackercup/Round1/2022/A1.cpp
        BigTech/Meta/Hackercup/Round1/2022/A2.cpp
        BigTech/Meta/Hackercup/Round1/2022/B1.cpp
        BigTech/Meta/Hackercup/Round1/2022/test_case_generator.cpp
        "BigTech/Meta/Hackercup/Round2/2022/In Contest/A1.cpp"
        "BigTech/Meta/Hackercup/Round2/2022/In Contest/B.cpp"
        BigTech/Meta/Hackercup/Round2/2022/A1.cpp
        BigTech/Meta/Hackercup/Round2/2022/template.cpp
        BigTech/microsoft-grid.cpp
        CF/2000+/aaparsa.cpp
        CF/2000+/flip-cards.cpp
        CF/div2.E/726.1.cpp
        CF/brute.cpp
        CF/a_cf.cpp
        CF/pacmen.cpp
        CF/template.cpp
        CF/test.cpp
        CSES/array-division.cpp
        CSES/building-roads.cpp
        CSES/building-teams.cpp
        CSES/coin-combinations-1.cpp
        CSES/coin-combinations-2.cpp
        CSES/common-divisors.cpp
        CSES/counting-divisors.cpp
        CSES/counting-rooms-bfs.cpp
        CSES/counting-rooms.cpp
        CSES/dice-combinations.cpp
        CSES/divisor-analysis.cpp
        CSES/exponentiation-2.cpp
        CSES/exponentiation.cpp
        CSES/flight-routes-check.cpp
        CSES/forest-queries.cpp
        CSES/game-routes.cpp
        CSES/graph-girth.cpp
        CSES/investigation.cpp
        CSES/labyrinth.cpp
        CSES/max-sub-sum.cpp
        CSES/message-route.cpp
        CSES/movie-festival-2.cpp
        CSES/movie-festival.cpp
        CSES/range-update-queries.cpp
        CSES/range-xor-queries.cpp
        CSES/room-allocation.cpp
        CSES/shortest-routes-1.cpp
        CSES/static-range-sum.cpp
        CSES/subarrays-sums-1.cpp
        CSES/sum-2.cpp
        CSES/sum-3.cpp
        CSES/task-deadlines.cpp
        CSES/towers.cpp
        CSES/traffic-lights.cpp
        Fun/erdos.cpp
        Fun/sudoku.cpp
        Fun/test.cpp
        ICPC/2020-NAQ/A.cpp
        ICPC/2020-NAQ/C.cpp
        ICPC/2020-NAQ/D.cpp
        ICPC/2020-NAQ/F.cpp
        ICPC/2020-NAQ/H.cpp
        "ICPC/2020-NERC Regionals/A.cpp"
        "ICPC/2020-NERC Regionals/B.cpp"
        "ICPC/2020-NERC Regionals/D.cpp"
        "ICPC/2020-NERC Regionals/I.cpp"
        "ICPC/2020-NERC Regionals/M.cpp"
        ICPC/2021-NAC/D.cpp
        ICPC/2021-NAC/F.cpp
        ICPC/2021-NAC/M.cpp
        "ICPC/2021-SCA Regionals/F.cpp"
        ICPC/2022/C.cpp
        ICPC/2022/C2.cpp
        ICPC/2022/D.cpp
        ICPC/2022/M.cpp
        ICPC/2022/prime_sieve.cpp
        ICPC/2022-NAQ/A.cpp
        ICPC/2022-NAQ/C.cpp
        ICPC/2022-NAQ/D.cpp
        ICPC/2022-NAQ/E.cpp
        ICPC/2022-NAQ/F.cpp
        ICPC/2022-NAQ/G.cpp
        ICPC/2022-NAQ/G2.cpp
        ICPC/2022-NAQ/G3.cpp
        ICPC/2022-NAQ/H.cpp
        ICPC/2022-NAQ/K.cpp
        ICPC/2023-NAQ/template.cpp
        ICPC/Practice/knapsack/BookShopSol.cp
        ICPC/Practice/knapsack/CoinCombosII.cp
        ICPC/Practice/knapsack/stdin_Template.cp
        ICPC/Practice/knapsack/stdin_Template.cpp
        ICPC/Practice/A.cpp
        ICPC/Practice/C.cpp
        ICPC/Practice/G.cpp
        ICPC/Practice/H.cpp
        ICPC/Practice/quantum-superposition.cpp
        ICPC/Practice/template.cpp
        Leetcode/easy/2432.cpp
        Leetcode/easy/2441.cpp
        Leetcode/easy/2443.cpp
        Leetcode/easy/2455.cpp
        Leetcode/easy/2460.cpp
        Leetcode/easy/653.cpp
        Leetcode/hard/2435.cpp
        Leetcode/hard/2444.cpp
        Leetcode/hard/2458.cpp
        Leetcode/hard/827.cpp
        Leetcode/medium/2433.cpp
        Leetcode/medium/2434.cpp
        Leetcode/medium/2442.cpp
        Leetcode/medium/2456.cpp
        Leetcode/medium/2457.cpp
        Leetcode/medium/2461.cpp
        Leetcode/medium/2462.cpp
        Leetcode/medium/valid-sudoku.cpp
        Leetcode/find-pivot-index.cpp
        Leetcode/leetcode.cpp
        "Templates/CF Template.cpp"
        Templates/hash.cpp
        "Templates/Math Template.cpp"
        Templates/sum.cpp
        "Templates/USACO Template.cpp"
        Templates/xor.cpp
        USACO/Gold/compare-out.cpp
        USACO/Gold/G-angry.cpp
        USACO/Gold/G-cardgame.cpp
        USACO/Gold/G-cbarn2.cpp
        USACO/Gold/G-cownav.cpp
        USACO/Gold/G-fcolor.cpp
        USACO/Gold/G-feast.cpp
        USACO/Gold/G-fencedin.cpp
        USACO/Gold/G-hps.cpp
        USACO/Gold/G-lasers.cpp
        USACO/Gold/G-mootube.cpp
        USACO/Gold/G-shortcut.cpp
        USACO/Gold/G-snowboots.cpp
        USACO/Gold/G-split.cpp
        USACO/Gold/G-talent.cpp
        USACO/Gold/G-time.cpp
        USACO/Gold/G-timeline.cpp
        USACO/Gold/S-ccski.cpp
        USACO/Gold/time-testing.cpp
        USACO/Silver/failed/S-diamonds.cpp
        USACO/Silver/S-convention2.cpp
        USACO/Silver/S-countcross.cpp
        USACO/Silver/S-diamond.cpp
        USACO/Silver/S-div7.cpp
        USACO/Silver/S-fenceplan.cpp
        USACO/Silver/S-moocast.cpp
        USACO/Silver/S-mountains.cpp
        USACO/Silver/S-paintbarn.cpp
        USACO/Silver/S-perimeter.cpp
        USACO/Silver/S-rental.cpp
        USACO/Silver/S-revegetate.cpp
        USACO/Silver/S-snowboots.cpp
        USACO/Silver/S-where.cpp
        USACO/Silver/S-wormsort.cpp
        USACO/Silver/usaco_jan_22_a.cpp
        USACO/usaco.cpp
        "USACO Retype.cpp" CF/cf.cpp CF/b_cf.cpp CF/c_cf.cpp CF/c_cf.cpp CF/e_cf.cpp USACO/Gold/G-moonetwork.cpp CF/icpc.cpp)
